--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,22 @@
     transform: rotate(360deg);
   } */
 }
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; 
+}
+
+.loading-text {
+  font-size: 2rem;
+  color: #fff;
+  font-weight: bold;
+}
