--- a/src/App.css
+++ b/src/App.css
@@ -75,3 +75,18 @@
     display: none !important;;;
   }
 }
+
+.seachContainer >div{
+  width: 210px;
+}
+
+@media only screen and (max-width: 600px) {
+  #react-select-2-placeholder {
+    font-size: 14px !important;
+  }
+  .seachContainer >div{
+    width: 100% !important;
+    margin-bottom: 5px !important;
+  }
+}
+
