--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,12 @@
   }
 }
 
+
+.twm-contact-one .contact-info-section .c-info-column {
+  padding: 0px 0px 0px 100px;
+  color: #17171d;
+  position: relative;
+  min-height: 75px;
+  margin-bottom: 70px !important;
+}
+
