minor changes added

--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,11 @@
   margin-bottom: 70px !important;
 }
 
+.maltabtn1:hover{
+  background-color: #1DA4FF !important;
+}
+
+#maltabtn1mobile{
+  color: #fff !important;
+}
+
