--- a/public/css/switcher.css
+++ b/public/css/switcher.css
@@ -104,7 +104,7 @@
 .color-skins li .skin-3{background-color: #e47c3f}
 .color-skins li .skin-4{background-color: #81bf52 }
 .color-skins li .skin-5{background-color: #ec2226}
-.color-skins li .skin-6{background-color: #1967d2}
+.color-skins li .skin-6{background-color: #009BD4}
 .color-skins li .skin-7{background-color: #686183;}
 .color-skins li .skin-8{background-color: #d45850;}
 .color-skins li .skin-9{background-color: #75bbc1;}
