create the whatsapp floating link for whatsapp group channel and change the scroll-to-top color changed

--- a/css/style.css
+++ b/css/style.css
@@ -5729,7 +5729,7 @@ ol li {
 button.scroltop {
   height: 40px;
   width: 40px;
-  background: #1d1b18;
+  background: #009BD4;
   border: none;
   position: fixed;
   right: 15px;
