Gulf jobs consultancy updated color scheme

--- a/css/style.css
+++ b/css/style.css
@@ -18052,7 +18052,7 @@ strong {
   left: calc(50% + 400px);
   /* top: 100px; */
   top: 60px;
-  background-color: #002860;
+  background-color: #009BD4;
   position: absolute;
   z-index: -1;
 }
@@ -18359,7 +18359,7 @@ strong {
 .twm-home-6-banner-section .twm-bnr-right-section .bnr-bg-icons > div.bnr-block-2 .bnr-block-2-content .bnr-block-2-content-bottom {
   font-size: 14px;
   font-weight: 500;
-  color: #002860;
+  color: #009BD4;
 }
 .twm-home-6-banner-section .twm-bnr-right-section .bnr-bg-icons > div.bnr-block-3 {
   position: absolute;
@@ -18880,7 +18880,7 @@ strong {
 
 /*Get in touch*/
 .twm-hpage-6-getintouch {
-  background-color: #002860;
+  background-color: #009BD4;
   padding: 200px 60px;
   border-right: 9px solid #009BD4;
   position: relative;
@@ -19686,7 +19686,7 @@ strong {
   content: "";
   right: calc(50% + 206px);
   top: 0px;
-  background-color: #002860;
+  background-color: #009BD4;
   position: absolute;
   z-index: -1;
 }
@@ -19758,7 +19758,7 @@ strong {
 .h-page-6-getjobs-wrap .h-page-6-getjobs-left .twm-media-bg-circle {
   width: 70%;
   height: 70%;
-  background-color: #002860;
+  background-color: #009BD4;
   border-radius: 50%;
   position: absolute;
   left: 50%;
@@ -19959,7 +19959,7 @@ strong {
 .twm-w-process-steps-h-page-7 {
   margin-bottom: 30px;
   padding: 30px;
-  background-color: #002860;
+  background-color: #009BD4;
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
 }
@@ -20117,7 +20117,7 @@ strong {
   content: "";
   left: calc(50% + 400px);
   top: 0px;
-  background-color: #002860;
+  background-color: #009BD4;
   position: absolute;
   z-index: -1;
 }
